change title again

--- a/ISoLA16/paper.tex
+++ b/ISoLA16/paper.tex
@@ -110,7 +110,7 @@
 
 
 
-\title{Challenges in Assured Runtime Verification} 
+\title{Challenges in High-Assurance  Runtime Verification} 
 \titlerunning{Assuring the Guardians}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
