--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -51,9 +51,9 @@ horizontal separation criteria are
 \texttt{horiz\_criteria}(\bm{-sx},  \bm{-sy},
 \epsilon, \bm{-vx},  \bm{-vy})   \\
 ( \texttt{horiz\_criteria}(\bm{sx},\bm{sy},
-\epsilon, \bm{vx},\bm{vy}) ) \wedge &&  \\ 
+\epsilon, \bm{vx},\bm{vy})  \wedge &&  \\ 
 \texttt{horiz\_criteria} (\bm{sx},  \bm{sy},
-\epsilon,  \bm{wx}, \bm{wy})& \Longrightarrow&
+\epsilon,  \bm{wx}, \bm{wy}) )& \Longrightarrow&
 \texttt{horiz\_criteria} (\bm{sx}, \bm{sy},
 \epsilon,\bm{vx},\bm{vy})\\
 ( \texttt{horiz\_criteria}(\bm{sx},  \bm{sy},
