--- a/ISoLA16/noninterference.tex
+++ b/ISoLA16/noninterference.tex
@@ -5,15 +5,15 @@ the correct functioning of the SUO.  For instance executing monitors
 may impact timing and scheduling. Care must be taken that any
 instrumentation of the SUO does not affect the functional
 correctness. In large systems, there are likely to be many monitors
-running; each monitor might trigger different steering modes. A common
+running; each monitor might trigger different steering procedures. A common
 pattern when things go wrong in complex safety-critical systems is
 that many alerts are sounded simultaneously often placing a burden on
 a human operator to sort things out.  One can easily envision an
 analogous situation where several monitors detect violations,
 triggering their respective steering procedures. Hence it is necessary
-to verify that these different steering modules do not interact with
+to verify that these different steering procedures do not interact with
 each other in ways that could compromise safety. In summary,
-high-assurance RV must uphold the Hippocratic vow ``to do no harm''.
+high-assurance RV must uphold the Hippocratic oath``to do no harm''.
 Ideally, we would formulate an noninterference theorem and the RV
 framework would produce a proof certificate that the composed system
 satisfies the property.
@@ -22,13 +22,13 @@ satisfies the property.
 \paragraph{Challenge:} \emph{Assured RV must safely compose with the
   SUO.}
 
-\paragraph{Copilot Approach}  
+\paragraph{Copilot Approach:}  
 The Copilot research group has yet to develop a general theory
 noninterference, but we have made a number of design decisions with
-this in mind, For instance, he choice of monitoring system state
+this in mind, for instance, the choice of monitoring system state
 through sampling was a deliberate attempt to minimize interference
 with the SUO. Running monitors in separate partitions on an ARINC 653
-compliant RTOS as in Section~\ref{sec:ft} ensures that the any fault
+compliant RTOS as in Section~\ref{sec:ft} ensures that any fault
 in the RV will not negatively affect the executing SUO. The RTOS
 scheduler also provides guarantees that a missed deadline in the RV
 does not affect the SUO.
