--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -4,7 +4,7 @@ have been addressed in our own research. In this section, we will
 raise three of the key additional challenges that we have identified
 as critical to address in future work.
 
-\paragraph{Safe Steering} The problem of what to do when a
+\paragraph{Safe Steering:} The problem of what to do when a
 specification has been violated is one of the most thorny problems in
 high-assurance RV and almost completely application dependent. The
 simplest action is to log the violation for further analysis or raise
@@ -16,7 +16,8 @@ adaptive control system, the RV framework may switch to a conventional
 controller, but whether this re-establishes safety depends on many
 factors.  Our experience in participating in UAS flight tests
 illustrate how difficult the steering problem can be as simply directing
-the vehicle into the ground so that it does not leave a test range not simple due to the need to consider
+the vehicle into the ground, so that it does not leave a test range,
+is  require the need to consider
 aircraft dynamics.  In many domains, the challenge in constructing an
 assured safe steering algorithm may be as difficult as constructing
 the adaptive autonomous algorithm itself.
@@ -26,9 +27,9 @@ steering performed once a specification violation is detected.}
  
 
 
-\paragraph{Predictive Monitors} Applying RV to application domains
-such as an adaptive control system that have strict timing constraints
-raises many technical challenges.  It is imperative that the  monitor  detect that the
+\paragraph{Predictive Monitors:} Applying RV to application domains  that have strict timing constraints,
+such as an adaptive control system,
+raises many technical challenges.  It is imperative that the  monitor  detects that the
 adaptive controller is about to loose stability in time to switch to a
 safe controller. In the case of our running example, the RV system
 needs to detect that two aircraft are about to lose separation in time
@@ -43,7 +44,7 @@ monitoring remains a research challenge for the RV community.
 
 
 
-\paragraph{Secured RV} Adding more software or hardware to a system
+\paragraph{Secured RV:} Adding more software or hardware to a system
 has the potential to introduce vulnerabilities that that can be
 exploited by an attacker.  Copilot and many other RV frameworks
 generate monitors that have constant time and constant space execution
