--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -1,23 +1,23 @@
 \section{Traceability}~\label{sec:trace}
  
 To ensure that the requirements and safety analyses performed early in
-systems development is reflected throughout the lifecycle, many
+systems development are reflected throughout the lifecycle, many
 guidelines for safety-critical software, such as DO-178C, require
 documentation of traceability from requirements to object
 code. Consequently, to promote the acceptance of high-assurance RV the
 monitor generation frameworks should produce documentation that
 supports traceability from specification to monitor code.
 
- \paragraph{Challenge:} Support  traceability from the reqirememts and system level analysis to the actual monitor code. 
+ \paragraph{Challenge:} \emph{Support  traceability from the requirements  and system level analysis to the actual monitor code.}
 
  \paragraph{Copilot Approach:} Using SBV to generate C monitors may
  create many small files and it can quite difficult to relate this to
  the specification. The code generation module has recently been
- revised to generate documentation that increase traceability. The
+ revised to generate documentation that improves traceability. The
  user can insert labels in their specifications flow down to the
  documentation. The translation process creates C header files with
- documentation formatted to be processed by the plan text graph
- description language processor DOT. As such each C function has
+ documentation formatted to be processed by the plain text graph
+ description language processor DOT. Each C function has
  accompanying auto-generated graphical documentation.
 
  In the case of the following example:
@@ -28,7 +28,8 @@ the SBV translation breaks this relatively simple expression into
 numerous small C functions and function parameters get instantiated
 with the variables being monitored.  The auto-generated documentation for one
 of these files 
-appears similar to   Figure~\ref{fig:trace2}, where the variables. 
+appears similar to   Figure~\ref{fig:trace2}, where the labels have
+the names of the program variables being monitored. 
 
 
 %\begin{figure}[ht!]
