--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -41,7 +41,7 @@ notoriously subtle voting algorithms to be used for fault-tolerant RV.
 In the course of the analysis of the separation criteria, a team of
 domain experts used the PVS interactive prover to prove theorems that
 characterize the correctness of the criteria.  We were able to apply
-the Copilot prover using Z3~\cite{XXX} to prove many of these theorems
+the Copilot prover using Z3~\cite{DeMoura2008} to prove many of these theorems
 within the Copilot framework. Among the properties proved about the
 horizontal separation criteria are
 
