--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -2111,4 +2111,31 @@ month={March}
   note =      {Accessed March, 2016.  \url{http://frama-c.com/index.html}},
   OPTannote =    {}
 }
+
+
+%------------------------------------
+%
+%------------------------------------
+@inproceedings{Barrett2011,
+ author = {Barrett, Clark and Conway, Christopher L. and Deters, Morgan and Hadarean, Liana and Jovanovi\'{c}, Dejan and King, Tim and Reynolds, Andrew and Tinelli, Cesare},
+ title = {CVC4},
+ booktitle = {Proceedings of the 23rd International Conference on Computer Aided Verification},
+ series = {CAV'11},
+ year = {2011},
+ pages = {171--177},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
+@inproceedings{DeMoura2008,
+ author = {De Moura, Leonardo and Bj{\o}rner, Nikolaj},
+ title = {Z3: An Efficient SMT Solver},
+ booktitle = {Proceedings of the Theory and Practice of Software, 14th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+ series = {TACAS'08/ETAPS'08},
+ year = {2008},
+ pages = {337--340},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
 %-----------------------------------
