--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -9,8 +9,8 @@ to prevent mishaps. In addition, strict licensing requirements are
 often demanded on human operators of  many safety-critical systems.
 In practice, the verification and validation of avionics
 and other safety-critical software systems relies heavily on it being
-predicable and existing regulatory guidance  such as
-DO-178~\cite{DO178B}  do not  have provisions to
+predicable and existing regulatory guidance,  such as
+DO-178~\cite{DO178B},  do not  have provisions to
 assure safety-critical systems that are not predictable at certification. 
 Yet technological advances are enabling the development of increasingly
 autonomous (IA) cyber-physical  systems that modify their behavior in response
@@ -53,9 +53,11 @@ chronicle a number of  challenges we have identified that must be
 thoroughly addressed in order to actualize high-assurance RV.  We hope
 that this helps inform other researchers that wish to apply RV to
 safety-critical systems. We examine  how  these issues have been
-addressed in our own work   with the help of a running example. A general theme of our
+addressed in our own work   with the help of a running example. A
+theme of our research has been the 
 application of lightweight formal methods to achieve
-high-assurance.   
+high-assurance  we identify opportunities for closer collaboration
+between the RV and tool communities.   
 
 
 
