--- a/ISoLA16/spec.tex
+++ b/ISoLA16/spec.tex
@@ -29,7 +29,7 @@ precise, but is that what is the expert wanted?   Phrases like
 ``erratic behavior'' may seem reasonable to a mature adult, but a how
 to precisely define them could easily become an open ended endeavor. 
 
-\paragraph{Challenge:} \empth{Precisely formalize safety properties in
+\paragraph{Challenge:} \emph{Precisely formalize safety properties in
   a decidable logic.}
 
 \paragraph{Copilot Approach:} We are conducting case studies informed
