clean up + 1st draft conclusion

--- a/ISoLA16/FT.tex
+++ b/ISoLA16/FT.tex
@@ -11,7 +11,7 @@ hazards and failure modes~\cite{Levenson}.  The level of desired
 reliability determines what faults the system must be designed to
 tolerate. If RV is to be the guarantor of safety, then it must at
 least meet the level of reliability demanded of the system as a whole.
-Thus high-assurance RV be designed to be
+Thus high-assurance RV should  be designed to be
 \emph{fault-tolerant}~\cite{butler-faults}, meaning it continues
 to provide its required functionality in the presence of faults.  A
 fault-tolerant system must not contain a \emph{single point of
@@ -58,7 +58,7 @@ temporal protections provided by ARINC 653 keep the monitors safe from
 other programs running on the same system.
 
 Systems that need be ultrareliable typically must employ redundancy to
-tolerate the most pernicious faults such as \emph{Byzantine fault}
+tolerate the most pernicious faults such as a \emph{Byzantine fault}
 (i.e., a fault in which different nodes interpret a single broadcast
 message differently.  There are have been  documented incidents in
 critical avionics  where sensors failed in a Byzantine fashion with
