--- a/ISoLA16/conclusion.tex
+++ b/ISoLA16/conclusion.tex
@@ -1,1 +1,15 @@
-\section{Conclusion}~\label{sec:conclusion}. 
+\section{Conclusion}~\label{sec:conclusion}.  High-assurance RV has
+the potential of becoming the avenue to assuring unpredictable and
+otherwise unassurable IA safety-critical systems. We have presented a
+number of challenges that we have identified as barriers to
+actualizing high-assurance RV and surveyed how we have addressed these
+challenges in the course of our own research using the Copilot
+framework. We hope this list will be useful to RV researchers as they
+apply their own work to safety-critical systems.  In addition, we
+believe we have demonstrated the efficacy of applying light-weight
+formal methods tools to address many of these challenges.  Progress on
+these issues is likely to come faster if a multidisciplinary approach
+is taken with domain specialists, safety engineers, verification tool
+builders, all collaborating with RV researchers. Much work
+remains and the list of challenges is likely to grow even as
+researchers address many of the issues raised here are solved. 
