--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -6,7 +6,7 @@ environment~\cite{Knight2002}.  The  grave consequences of failure have compelle
 industry and regulatory authorities  to adapt conservative design
 approaches and exhaustive verification and validation (V\&V) procedures
 to prevent mishaps. In addition, strict licensing requirements are
-often demanded on human operators of  many safety-critical systems.
+often placed on human operators of  many safety-critical systems.
 In practice, the verification and validation of avionics
 and other safety-critical software systems relies heavily on it being
 predicable and existing regulatory guidance,  such as
@@ -41,8 +41,9 @@ component that can be assured using conventional means that
 \emph{High-assurance} RV provides an assured level of safety even when
 the SUO itself cannot be verified  by conventional
 means. Copilot~\cite{copilot, pike-isse-13} is an RV framework
-targeted at safety-critical hard real-realtime systems, which we have
-recently applied to our program of high-assurance RV.  
+targeted at safety-critical hard real-realtime systems, which has
+served as a platform for investigation  conducted as a part of a
+research   program in  high-assurance RV.  
 
 
 \paragraph{Contributions:} During the course of our research we have
