--- a/ISoLA16/observ.tex
+++ b/ISoLA16/observ.tex
@@ -1,7 +1,7 @@
 \section{Observability}\label{sec:observ} 
 Guaranteeing that all the data required by the specification is
 actually \emph{observable} is one of the principal engineering
-challenges of RV. In embedded systems the RV specification often
+challenges of RV. In embedded systems, the RV specification often
 involves data from a number of different types of data sources,
 including state data of executing programs, sensor data, as well as
 data that is communicated from other systems.  The systems safety
