--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -1022,7 +1022,7 @@ publisher = {IEEE Computer Society},
 @article{johnson2015tecs,
   Title                    = {Real-Time Reachability for Verified Simplex Design},
   Author                   = {Taylor T. Johnson and Stanley Bak and Marco Caccamo and Lui Sha},
-  journal                = {ACM Transactions on Embedded Computing Systems (<a href="http://www.acm.org/tecs/">TECS</a>)},
+  journal                = {ACM Transactions on Embedded Computing Systems},
   Year                     = {2015},
   Month                    = sep,
   Publisher                = {ACM}
