--- a/ISoLA16/verispec.tex
+++ b/ISoLA16/verispec.tex
@@ -16,7 +16,7 @@ monitors in a seamless fashion.
 specification.}   
 
 \paragraph{Copilot Approach:}  
- Copilot supports automated proofs of properties of specification
+ Copilot supports automated proofs of specification
  properties  through its {\tt Copilot.Theorem} module.  Applying a 
 ``synchronous observer'' approach~\cite{amast93}, properties \emph{about}
 Copilot programs are specified \emph{within} Copilot itself. In particular,
@@ -57,8 +57,8 @@ horizontal separation criteria are
 \epsilon,  \bm{vx},  \bm{vy})  \wedge  &&\\
 \texttt{horiz\_criteria}(\bm{sx},  \bm{sy}, \epsilon',  \bm{vx},  \bm{vy}) )  &\Longrightarrow & \epsilon = \epsilon'
 \end{eqnarray*}
-A few of the properties proved in PVS  involve complex existential quantifiers over
-the real numbers and would require the use of a interactive prover,
+A few of the properties proved in PVS involve continuous mathematics
+that remains beyond the capabilities of fully automated tools,
 but combined with testing we have a convincing argument that we got the
 specification correct. 
 
