--- a/ISoLA16/noninterference.tex
+++ b/ISoLA16/noninterference.tex
@@ -2,7 +2,7 @@
 composed with the SUO so that they are executing in parallel with the
 SUO.  Care must be taken that the RV system itself does not compromise
 the correct functioning of the SUO.  For instance executing monitors
-may impact timing and scheduling. Care must be taken that any
+may impact timing and scheduling. Care must also be taken that any
 instrumentation of the SUO does not affect the functional
 correctness. In large systems, there are likely to be many monitors
 running; each monitor might trigger different steering procedures. A common
@@ -13,8 +13,8 @@ analogous situation where several monitors detect violations,
 triggering their respective steering procedures. Hence it is necessary
 to verify that these different steering procedures do not interact with
 each other in ways that could compromise safety. In summary,
-high-assurance RV must uphold the Hippocratic oath``to do no harm''.
-Ideally, we would formulate an noninterference theorem and the RV
+high-assurance RV must uphold the Hippocratic oath ``to do no harm''.
+Ideally, we would formulate a noninterference theorem and the RV
 framework would produce a proof certificate that the composed system
 satisfies the property.
 
@@ -23,12 +23,12 @@ satisfies the property.
   SUO.}
 
 \paragraph{Copilot Approach:}  
-The Copilot research group has yet to develop a general theory
+The Copilot research group has yet to develop a general theory of RV 
 noninterference, but we have made a number of design decisions with
 this in mind, for instance, the choice of monitoring system state
 through sampling was a deliberate attempt to minimize interference
 with the SUO. Running monitors in separate partitions on an ARINC 653
-compliant RTOS as in Section~\ref{sec:ft} ensures that any fault
+compliant RTOS as discussed in Section~\ref{sec:ft} ensures that any fault
 in the RV will not negatively affect the executing SUO. The RTOS
 scheduler also provides guarantees that a missed deadline in the RV
 does not affect the SUO.
